--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=dpg-d27857fdiees73c3dqig-a.oregon-postgres.render.com;Database=sofvisit;Username=admin;Password=AqwBurUSqDPdKoMd6I9u60LOotohfGHY;
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
